--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,11 +20,11 @@
       <x>0</x>
       <y>0</y>
       <width>541</width>
-      <height>571</height>
+      <height>591</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="task1">
      <attribute name="title">
@@ -126,9 +126,9 @@
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>430</x>
-        <y>30</y>
-        <width>101</width>
+        <x>50</x>
+        <y>70</y>
+        <width>421</width>
         <height>31</height>
        </rect>
       </property>
@@ -138,13 +138,13 @@
        </font>
       </property>
       <property name="text">
-       <string>Посчитать</string>
+       <string>Посчитать количество слов и их длину</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="lineEditTask2">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>180</x>
         <y>30</y>
         <width>291</width>
         <height>31</height>
@@ -159,7 +159,7 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>50</x>
         <y>30</y>
         <width>131</width>
         <height>31</height>
@@ -177,10 +177,10 @@
      <widget class="QListWidget" name="listWidget_2">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>70</y>
-        <width>411</width>
-        <height>461</height>
+        <x>50</x>
+        <y>110</y>
+        <width>421</width>
+        <height>321</height>
        </rect>
       </property>
      </widget>
@@ -189,6 +189,101 @@
      <attribute name="title">
       <string>Задание 3</string>
      </attribute>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>30</y>
+        <width>151</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Сгенерировать</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinBox">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>30</y>
+        <width>61</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>50</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>30</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Кол-во элементов списка</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_3">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>70</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Удалить</string>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listWidget_3">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>70</y>
+        <width>181</width>
+        <height>331</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listWidget_4">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>70</y>
+        <width>181</width>
+        <height>331</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="task4">
      <attribute name="title">
